@@ -1,7 +1,8 @@
 CHANGES IN FLTK 1.1.7
 
-	- Documentation fixes (STR #648, STR #692, STR #730, STR
-	  #744, STR #745, STR #931, STR #942, STR #960, STR #969)
+	- Documentation fixes (STR #571, STR #648, STR #692, STR
+	  #730, STR #744, STR #745, STR #931, STR #942, STR #960,
+	  STR #969)
 	- Fl_GIF_Image did not handle images with an incorrect
 	  number of data bits (STR #914)
 	- Fixed some plastic drawing artifacts (STR #906)
